--- a/vignettes/futures.Rmd
+++ b/vignettes/futures.Rmd
@@ -3,7 +3,7 @@ title: "Launching tasks with future"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{Launching tasks with future}
+  %\VignetteIndexEntry{4. Launching tasks with future}
   %\VignetteEncoding{UTF-8}
 ---
 
