--- a/vignettes/shiny.Rmd
+++ b/vignettes/shiny.Rmd
@@ -3,7 +3,7 @@ title: "Using promises with Shiny"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{Using promises with Shiny}
+  %\VignetteIndexEntry{5. Using promises with Shiny}
   %\VignetteEncoding{UTF-8}
 ---
 
