--- a/vignettes/overview.Rmd
+++ b/vignettes/overview.Rmd
@@ -3,7 +3,7 @@ title: "Working with promises in R"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{Working with promises in R}
+  %\VignetteIndexEntry{3. Working with promises in R}
   %\VignetteEncoding{UTF-8}
 ---
 
