--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -280,7 +280,7 @@ This is useful for logging, or other “side effecty” operations.
 
 There’s also `%...!%`, and its tee version, `%...T!%`, which are used for error
 handling. I won’t confuse you with more about that now, but you can read more
-here. [TODO: link]
+[here](overview.html#error-handling).
 
 The `promises` package is where all of these operators live, and it also comes
 with some additional functions for working with promises.
@@ -291,17 +291,15 @@ functions come from, read [this guide to the `future` package](futures.html).
 
 There are the lower-level functions `then`, `catch`, and `finally`, which are
 the non-pipe, non-operator equivalents of the promise operators we’ve been
-discussing. See [reference](https://rstudio.github.io/promises/reference/then.html).
+discussing. See [reference](overview.html#accessing-results-with-then).
 
 And finally, there are `promise_all`, `promise_race`, and `promise_lapply`, used to combine
-multiple promises into a single promise. Learn more about them [here](https://rstudio.github.io/promises/reference/promise_all.html).
+multiple promises into a single promise. Learn more about them [here](../reference/promise_all.html).
 
 **OK, looks like I have a lot of stuff to read up on. And I’ll probably have to
 reread this conversation a few times before it fully sinks in.**
 
-Sorry. I told you it was complicated. If you understand this guide, the one
-about error handling, and the one about creating promises, you’ll be 95% of the
-way there.
+Sorry. I told you it was complicated. If you make it through the rest of the guide, you’ll be 95% of the way there.
 
 <div style="font-size: 20px; margin-top: 40px; text-align: right;">
 Next: [Working with promises](overview.html)
